# the_game_of_live

./: CMakeLists.txt  README.md  cells.cpp  cells.h  main.cpp
